Add instant patch

--- a/dmenu.1
+++ b/dmenu.1
@@ -3,7 +3,7 @@
 dmenu \- dynamic menu
 .SH SYNOPSIS
 .B dmenu
-.RB [ \-bfitv ]
+.RB [ \-bfnitv ]
 .RB [ \-l
 .IR lines ]
 .RB [ \-m
@@ -42,6 +42,9 @@ dmenu appears at the bottom of the screen.
 .TP
 .B \-i
 dmenu matches menu items case insensitively.
+.TP
+.B \-n
+dmenu instantly selects if only one match.
 .TP
 .BI \-l " lines"
 dmenu lists items vertically, with the given number of lines.
